<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/acao_busca"
        android:title="@string/action_search"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_search"
        android:label="Buscar"
        android:hint="Buscar"
        android:voiceSearchMode="showVoiceSearchButton|launchRecognizer"
        app:showAsAction="ifRoom"/>
    <!-- app:showAsAction="always"
     app:actionViewClass="android.support.v7.widget.SearchView"-->

    <item
        android:id="@+id/acao_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/acao_sobre"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/acao_sair"
        android:orderInCategory="100"
        android:title="@string/action_sair"
        app:showAsAction="never" />
</menu>
